css/style.css
body {
    font-family: 'Open Sans', sans-serif;
}

/**********/
/* NAVBAR */
/**********/
.navbar {
    padding-left: 50px;
    padding-right: 50px;
    padding-top: 50px;
    padding-bottom: 50px;
}

.navbar-brand {
    transition: 0.5s ease;
    font-weight: 700;
    font-size: 45px;
    color: black;
    min-height: 10px;
}

.navbar-brand:hover {
    transition: 0.5s ease;
    color: #a3a3a3;
}

.navbar-nav {
    float: right;
    height: 10px;
    margin-top: 19px;
}

a.active {
    color: black!important;
}

.navbar-nav > li > a {
    transition: .25s ease;
    margin-left: 10px;
    min-height: 10px;
    font-weight: 400;
    color: #a3a3a3;
}

.navbar-nav > li > a:hover {
    transition: .5s ease;
    color: black!important;
}

/********************/
/* FRONT PAGE POSTS */
/********************/
div.post {
    display: inline-block;
    width: 33%;
    margin-bottom: 30px;
}

div.post > a > img.post-image {
    transition: .5s ease;
    display: block;
    margin: auto;
    object-fit: cover;
    width: 350px;
    height: 350px;
}

div.post > a > img.post-image:hover {
    transition: .5s ease;
    opacity: 0.7;
}

div.post > h3 {
    font-weight: 300;
    font-size: 15px;
    text-align: center;
    margin-top: 15px;
}

div.post > h3 > a {
    text-decoration: none;
    color: #666666;
}

div.posts {
    line-height: 0;
    -webkit-column-count: 3;
    -webkit-column-gap:   0px;
    -moz-column-count:    3;
    -moz-column-gap:      0px;
    column-count:         3;
    column-gap:           0px;
}

/***********/
/* CONTACT */
/***********/
.contact {
    font-weight: 300;
    margin-left: 50px;
    text-decoration: none;
    color: #666666;
}

.contact-social {
    transition: .5s ease;
}

.contact-social:hover {
    transition: .5s ease;
    opacity: 0.5;
}

/************/
/* RESIZING */
/************/
@media (max-width: 1200px) {
    div.post {
        width: 45%;
    }
}

@media (max-width: 1000px) {
    .navbar {
        padding-left: 0px;
        padding-right: 0px;
        text-align: center;
    }
    .navbar-brand {
        width: 100%;
    }
    .navbar-nav {
        float: none;
        margin-top: 0px;
        display: inline-block;
    }
    div.post {
        width: 100%;
    }
    .contact {
        text-align: center;
        margin-left: 0px;
    }
}
@media (max-width: 550px) {
    .navbar {
        padding-right: 0px;
    }
    .navbar-nav {
        height: auto;
    }
    .navbar-nav .nav-item {
        margin-left: 0px;
        float: none;
        margin: 0px!important;
    }
    .navbar-nav > li {
        float: none;
        display: block;
    }
}

